@@ -1,5 +1,8 @@
 Major changes between version 0.99.1 and 0.99.2.
 ------------------------------------------------
+  - Removed spurious calls to {ppp,slip,dev}_reroute(). These
+    were unnecessary (I think) and perhaps the reason why the
+    idle filter socket sometimes seemed to stop receiving data.
   - The proxy should never be downed - it needs to be up in case
     we want to pass packets back to the kernel - instead we just
     remove the address.
